; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DIALOG_FindMsgDestination.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_dialog.c_DIALOG_FindMsgDestination.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@GWL_STYLE = common dso_local global i32 0, align 4
@DS_CONTROL = common dso_local global i32 0, align 4
@WNDS_DIALOGWINDOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @DIALOG_FindMsgDestination to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @DIALOG_FindMsgDestination(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  br label %5

5:                                                ; preds = %45, %1
  %6 = load i64, i64* %2, align 8
  %7 = load i32, i32* @GWL_STYLE, align 4
  %8 = call i32 @GetWindowLongA(i64 %6, i32 %7)
  %9 = load i32, i32* @DS_CONTROL, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %47

12:                                               ; preds = %5
  %13 = load i64, i64* %2, align 8
  %14 = call i64 @GetParent(i64 %13)
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %12
  br label %47

18:                                               ; preds = %12
  %19 = load i64, i64* %4, align 8
  %20 = call i32 @IsWindow(i64 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %18
  br label %47

23:                                               ; preds = %18
  %24 = load i64, i64* %4, align 8
  %25 = call %struct.TYPE_4__* @ValidateHwnd(i64 %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %3, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %27 = icmp ne %struct.TYPE_4__* %26, null
  br i1 %27, label %28, label %36

28:                                               ; preds = %23
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %30 = call i32 @TestWindowProcess(%struct.TYPE_4__* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %28
  %33 = load i64, i64* %4, align 8
  %34 = call i64 (...) @GetDesktopWindow()
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32, %28, %23
  br label %47

37:                                               ; preds = %32
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @WNDS_DIALOGWINDOW, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %45, label %44

44:                                               ; preds = %37
  br label %47

45:                                               ; preds = %37
  %46 = load i64, i64* %4, align 8
  store i64 %46, i64* %2, align 8
  br label %5

47:                                               ; preds = %44, %36, %22, %17, %5
  %48 = load i64, i64* %2, align 8
  ret i64 %48
}

declare dso_local i32 @GetWindowLongA(i64, i32) #1

declare dso_local i64 @GetParent(i64) #1

declare dso_local i32 @IsWindow(i64) #1

declare dso_local %struct.TYPE_4__* @ValidateHwnd(i64) #1

declare dso_local i32 @TestWindowProcess(%struct.TYPE_4__*) #1

declare dso_local i64 @GetDesktopWindow(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
